# HackRitual

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROGRESS.md  README.md  RISKS.md  dev.sh  docker-compose.yml  hf-space-header.yml  mkdocs.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-docs.yml  sync-to-hf.yml
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4ccb063860c1_add_user_status.py  a1b2c3d4e5f6_hackagon_inspired_schema.py  b2c3d4e5f6a7_add_participant_invite_code.py  e5f6a7b8c9d0_add_repositories.py
backend/app/: cli.py  config.py  docs.py  main.py
backend/app/models/: __init__.py  _mixins.py  agent.py  audit_log.py  event.py  file.py  login_code.py  participant.py  project.py  score.py  session.py  task.py  user.py
backend/app/routers/: admin.py  agents.py  auth.py  event.py  exports.py  me.py  pages.py  participants.py  phases.py  projects.py  repos.py  scores.py  setup.py  uploads.py  users.py
backend/app/schemas/: agents.py  auth.py  event.py  participants.py  projects.py  repos.py  scores.py  uploads.py  users.py
backend/app/services/: auth.py  email.py  export.py  images.py  participants.py  repos.py  seeder.py
backend/app/utils/: files.py  logging.py
backend/scripts/: README.md  hackritual_mcp.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_database.py  test_health.py  test_participants.py  test_scaffold.py  test_users.py
docker/: Dockerfile  entrypoint.sh
docs/: admin-guide.md  agent-guide.md  api-reference.md  api.md  architecture.md  configuration.md  data-model.md  demo-mode.md  deployment.md  development.md  event-lifecycle.md  index.md  openapi.json  redoc.html  writing-style.md
docs/stylesheets/: hackritual.css
frontend/: next.config.mjs  pnpm-lock.yaml  tsconfig.json
frontend/tests/: screenshots.spec.ts
static/: 404.html  index.html  index.txt
(+445 files in other folders)
