[project]
name = "hackritual"
version = "0.1.0"
description = "An easy-to-summon platform for ritualised collaborative invention."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["hackathon", "event", "platform", "fastapi"]

authors = [
  { name = "HackRitual Contributors" },
]

dependencies = [
  # Web framework
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  # Configuration
  "pydantic-settings==2.6.1",
  # Database
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "aiosqlite==0.20.0",
  # Auth
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  # Email
  "aiosmtplib==3.0.2",
  # CLI (typer 0.15.x requires click<8.2 due to make_metavar API change)
  "typer==0.15.1",
  "click<8.2",
  "rich==13.9.4",
  # Utils
  "python-multipart==0.0.12",
  "python-dotenv==1.0.1",
  # Scaffold companion (YAML frontmatter parsing for kanban tickets)
  "pyyaml>=6.0",
  # Image processing (server-side dither/halftone for uploads)
  "pillow==10.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "httpx==0.28.1",
  "anyio==4.7.0",
]
# Install with `uv sync --extra mcp` to run scripts/hackritual_mcp.py — an
# MCP server that exposes the REST API as tools for Claude Desktop / mcp-cli.
mcp = [
  "mcp>=1.0.0",
  "httpx>=0.28.1",
]

[project.scripts]
# CLI entry point — `uv run hackritual` or `hackritual` after install
hackritual = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
